--- a/index.html
+++ b/index.html
@@ -1,48 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Buscador de Letras - JSModerno</title>
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
+    <!-- <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.0/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/spinner.css">
+    </head>
+
 <body>
 
-    <main id="contenido" class="contenido">
-            <h1>Letras de Canciones</h1>
-            <div class="contenedor">
-                    <div id="buscar" class="buscar">
-                            <h2>Búsqueda</h2>
-                            <p>Busca por artista y nombre:</p>
-                            <p><span> * </span>Obligatorio</p>
-                            <form action="#" id="formulario-buscar">
-                                <div class="input">
-                                    <label for="artista">Artista: <span>*</span></label>
-                                    <input type="text" id="artista" placeholder="Artista">
-                                </div>
-                                <div class="input">
-                                    <label for="cancion">Canción: <span>*</span></label>
-                                    <input type="text" id="cancion" placeholder="Nombre Canción">
-                                </div>
-
-                                <div class="input enviar">
-                                    <input type="submit" value="Buscar">
-                                </div>
-                            </form>
-                    </div>
-                    
-                    <div class="letra-resultado">
-                            <h2></h2>
-                            <div id="resultado"></div>
-                    </div>
-                    <div id="mensajes"></div>
+    <div class="container">
+        <h1 class="fs-1 text-center">BUSCAR CANCIONES</h1>
+        <div id="buscar" class="buscar">
+            <p><span> * </span>Obligatorio</p>
+            <form action="#" id="formulario-buscar" class="row">
+                <div class="mb-3 form-group col-md-5">
+                    <label for="artista" class="form-label">Nombre del artista *</label>
+                    <input type="text" class="form-control" id="artista" placeholder="Ingrese el nombre de un artista"
+                        aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3 form-group col-md-5">
+                    <label for="cancion" class="form-label">Nombre de la cancion *</label>
+                    <input type="text" class="form-control" id="cancion" placeholder="Ingrese una cancion">
+                </div>
+                <div class="form-group col-md-2 d-flex align-items-center mt-3">
+                    <button type="submit" class="btn btn-primary w-100">Buscar</button>
+                </div>
+                <div class="lds-dual-ring m-auto d-none" id="spinner"></div>
+                <div id="mensajes" class="alert" role="alert"></div>
+            </form>
+        </div>
+        <div class="letra-resultado row">
+            <h2></h2>
+            <div class="text-uppercase" id="resultado" style="white-space: pre-wrap; padding: 2rem;">
             </div>
-    </main>
+        </div>
+    </div>
 
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
     <script src="js/app.js" type="module"></script>
 </body>
+
 </html>
